chore(database): improve dotenv sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,1 @@
-// replace <> with database server url to view on server, or 'localhost' to view on port 3000
-
-MONGOHQ_URL=<>
+MONGOHQ_URL=<URL to MondoDB Database>
