--- a/.eslintrc
+++ b/.eslintrc
@@ -7,24 +7,25 @@
     "mocha": true
   },
   "rules": {
-    "max-len":["error", 80, 2],
-    "indent": ["error", 2],
+    "max-len":[2, 80, 2],
+    "indent": [2, 2],
     "one-var": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
+  "no-undef": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
-    "global-require": "off",
-    "curly": ["error", "multi-line"],
-    "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
-    "valid-jsdoc": ["error", {
+    "global-require": 0,
+    "curly": [2, "multi-line"],
+    "no-shadow": [2, { "allow": ["req", "res", "err"] }],
+    "valid-jsdoc": [2, {
       "requireReturn": true,
       "requireReturnType": true,
       "requireParamDescription": false,
       "requireReturnDescription": true
     }],
-    "require-jsdoc": ["error", {
+    "require-jsdoc": [2, {
         "require": {
             "FunctionDeclaration": true,
             "MethodDefinition": true,
