--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/cardsforhumanity/cardsforhumanity.git"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+    "node": "6.9.4",
+    "npm": "3.10.10"
   },
   "scripts": {
     "start": "node node_modules/grunt-cli/bin/grunt",
@@ -22,7 +22,7 @@
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
     "connect-flash": "~0.1.1",
-    "connect-mongo": "~0.3.3",
+    "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
     "dotenv": "^4.0.0",
     "express": "~3.4.0",
@@ -32,7 +32,8 @@
     "grunt-cli": "~0.1.9",
     "jade": "~0.35.0",
     "mean-logger": "~0.0.1",
-    "mongoose": "~3.6.20",
+    "mongodb": "^2.2.19",
+    "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
     "passport-github": "~0.1.5",
