--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
     "jade": "~0.35.0",
+    "jsonwebtoken": "^7.2.1",
     "mean-logger": "~0.0.1",
+    "moment": "^2.17.1",
     "mongodb": "^2.2.19",
     "mongoose": "^4.7.6",
     "passport": "~0.1.17",
