--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "mongodb": "^2.2.21",
+    "moment": "^2.17.1",
+    "mongodb": "^2.2.19",
     "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
