--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "npm": "4.1.1"
   },
   "scripts": {
-    "start": "node node_modules/grunt-cli/bin/grunt",
-    "test": "node node_modules/grunt-cli/bin/grunt test",
-    "postinstall": "node node_modules/grunt-cli/bin/grunt install"
+    "start": "gulp",
+    "test": "node node_modules/gulp/bin/gulp test"
   },
   "dependencies": {
     "async": "~0.2.9",
@@ -27,12 +26,25 @@
     "dotenv": "^4.0.0",
     "express": "~3.4.0",
     "forever": "latest",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
+    "grunt-concurrent": "^0.4.3",
+    "grunt-contrib-jshint": "^0.6.5",
+    "grunt-contrib-sass": "^0.5.1",
+    "grunt-contrib-watch": "^0.5.3",
+    "grunt-mocha-test": "^0.7.0",
+    "grunt-nodemon": "^0.1.2",
+    "gulp": "^3.9.1",
     "jade": "~0.35.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "mean-logger": "~0.0.1",
-    "mongodb": "^2.2.19",
+    "mongodb": "^2.2.21",
     "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
@@ -40,27 +52,60 @@
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
+    "should": "^1.3.0",
     "sinon": "~1.7.3",
     "socket.io": "~0.9.16",
     "socket.io-client": "~0.9.16",
+    "supertest": "~0.8.0",
     "underscore": "~1.5.2",
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
+    "bcryptjs": "^1.0.5",
+    "browser-sync": "^2.18.6",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "dotenv": "^4.0.0",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "express": "^3.4.8",
     "grunt": "~0.4.1",
-    "grunt-concurrent": "~0.4.0",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-test": "~0.7.0",
-    "grunt-nodemon": "~0.1.1",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-concurrent": "^0.4.3",
+    "grunt-contrib-jshint": "^0.6.5",
+    "grunt-contrib-sass": "^0.5.1",
+    "grunt-contrib-watch": "^0.5.3",
+    "grunt-mocha-test": "^0.7.0",
+    "grunt-nodemon": "^0.1.2",
+    "gulp": "^3.9.1",
+    "gulp-bower": "0.0.13",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^3.1.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "should": "~1.3.0",
-    "supertest": "~0.8.0"
+    "mean-logger": "0.0.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^2.2.21",
+    "mongoose": "^4.7.7",
+    "nodemon": "^1.11.0",
+    "passport": "^0.1.18",
+    "passport-facebook": "^2.0.0",
+    "passport-github": "^0.1.5",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^0.1.5",
+    "passport-local": "^0.1.6",
+    "passport-twitter": "^1.0.4",
+    "should": "^1.3.0",
+    "socket.io": "^0.9.17",
+    "supertest": "~0.8.0",
+    "underscore": "^1.5.2",
+    "view-helpers": "^0.1.5"
   }
 }
