--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
+    "eslint": "^3.13.1",
     "bcryptjs": "^1.0.5",
     "browser-sync": "^2.18.6",
     "connect-flash": "^0.1.1",
