--- a/package.json
+++ b/package.json
@@ -9,109 +9,71 @@
     "url": "https://github.com/cardsforhumanity/cardsforhumanity.git"
   },
   "engines": {
-    "node": "6.9.4",
-    "npm": "4.1.1"
+    "node": "6.6.0",
+    "npm": "3.10.3"
   },
   "scripts": {
-    "start": "gulp",
-    "test": "gulp test"
+    "start": "node node_modules/gulp/bin/gulp",
+    "test": "node node_modules/gulp/bin/gulp test",
+    "postinstall": "node node_modules/gulp/bin/gulp install",
+    "test:coverage": "rm -rf coverage/ && karma start --single-run",
+    "coveralls": "cat ./coverage/**/lcov.info | coveralls"
   },
   "dependencies": {
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
+    "chai": "^3.5.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
-    "dotenv": "^4.0.0",
+    "dotenv": "^2.0.0",
     "express": "~3.4.0",
+    "express-session": "^1.14.1",
     "forever": "latest",
-    "grunt": "^0.4.5",
-    "grunt-bower-task": "~0.4.0",
-    "grunt-cli": "~0.1.9",
-    "grunt-concurrent": "^0.4.3",
-    "grunt-contrib-jshint": "^0.6.5",
-    "grunt-contrib-sass": "^0.5.1",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-mocha-test": "^0.7.0",
-    "grunt-nodemon": "^0.1.2",
     "gulp": "^3.9.1",
+    "gulp-bower": "0.0.13",
     "jade": "~0.35.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "jquery": "^3.1.1",
+    "jsonwebtoken": "^7.1.9",
     "mean-logger": "~0.0.1",
-    "mongodb": "^2.2.21",
-    "jsonwebtoken": "^7.2.1",
-    "moment": "^2.17.1",
-    "mongoose": "^4.7.6",
+    "mocha": "^3.1.0",
+    "mongoose": ">=4.1.11",
+    "morgan": "^1.7.0",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
     "passport-github": "~0.1.5",
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
-    "should": "^1.3.0",
+    "request": "^2.75.0",
     "sinon": "~1.7.3",
     "socket.io": "~0.9.16",
     "socket.io-client": "~0.9.16",
-    "supertest": "~0.8.0",
     "underscore": "~1.5.2",
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
-    "eslint": "^3.13.1",
-    "bcryptjs": "^1.0.5",
-    "browser-sync": "^2.18.6",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
-    "dotenv": "^4.0.0",
-    "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "express": "^3.4.8",
-    "grunt": "~0.4.1",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "^0.4.3",
-    "grunt-contrib-jshint": "^0.6.5",
-    "grunt-contrib-sass": "^0.5.1",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-mocha-test": "^0.7.0",
-    "grunt-nodemon": "^0.1.2",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "coveralls": "^2.11.14",
+    "eslint": "^3.6.1",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-eslint": "^3.0.1",
-    "gulp-exit": "0.0.2",
+    "gulp-livereload": "^3.8.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-sass": "^2.3.2",
+    "istanbul": "^0.4.5",
     "jasmine-core": "^2.5.2",
-    "jsonwebtoken": "^7.2.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "mean-logger": "0.0.1",
-    "moment": "^2.17.1",
-    "mongo": "^0.1.0",
-    "mongodb": "^2.2.21",
-    "mongoose": "^4.7.7",
-    "nodemon": "^1.11.0",
-    "passport": "^0.1.18",
-    "passport-facebook": "^2.0.0",
-    "passport-github": "^0.1.5",
-    "passport-google": "^0.3.0",
-    "passport-google-oauth": "^0.1.5",
-    "passport-local": "^0.1.6",
-    "passport-twitter": "^1.0.4",
-    "should": "^1.3.0",
-    "socket.io": "^0.9.17",
-    "supertest": "~0.8.0",
-    "underscore": "^1.5.2",
-    "view-helpers": "^0.1.5"
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "mocha": "^3.1.0",
+    "ng-html2js": "^3.0.0"
   }
 }
