--- a/package.json
+++ b/package.json
@@ -1,66 +1,72 @@
 {
-  "name": "cardsforhumanity",
-  "description": "A Game For Horrible People Desperately Trying To Do Good",
-  "version": "1.0.0",
-  "private": false,
-  "author": "cardsforhumanity",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cardsforhumanity/cardsforhumanity.git"
-  },
-  "engines": {
-    "node": "6.9.4",
-    "npm": "4.1.1"
-  },
-  "scripts": {
-    "start": "node node_modules/grunt-cli/bin/grunt",
-    "test": "node node_modules/grunt-cli/bin/grunt test",
-    "postinstall": "node node_modules/grunt-cli/bin/grunt install"
-  },
-  "dependencies": {
-    "async": "~0.2.9",
-    "bcryptjs": "~1.0.4",
-    "bower": "~1.3.8",
-    "connect-flash": "~0.1.1",
-    "connect-mongo": "^1.3.2",
-    "console-stamp": "~0.1.1",
-    "dotenv": "^4.0.0",
-    "express": "~3.4.0",
-    "forever": "latest",
-    "grunt": "~0.4.1",
-    "grunt-bower-task": "~0.4.0",
-    "grunt-cli": "~0.1.9",
-    "jade": "~0.35.0",
-    "mean-logger": "~0.0.1",
-    "mongodb": "^2.2.19",
-    "mongoose": "^4.7.6",
-    "passport": "~0.1.17",
-    "passport-facebook": "~2.0.0",
-    "passport-github": "~0.1.5",
-    "passport-google-oauth": "~0.1.5",
-    "passport-local": "~0.1.6",
-    "passport-twitter": "~1.0.2",
-    "sinon": "~1.7.3",
-    "socket.io": "~0.9.16",
-    "socket.io-client": "~0.9.16",
-    "underscore": "~1.5.2",
-    "view-helpers": "~0.1.3"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-concurrent": "~0.4.0",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-test": "~0.7.0",
-    "grunt-nodemon": "~0.1.1",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "should": "~1.3.0",
-    "supertest": "~0.8.0"
-  }
+    "name": "cardsforhumanity",
+    "description": "A Game For Horrible People Desperately Trying To Do Good",
+    "version": "1.0.0",
+    "private": false,
+    "author": "cardsforhumanity",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/cardsforhumanity/cardsforhumanity.git"
+    },
+    "engines": {
+        "node": "6.9.4",
+        "npm": "4.1.1"
+    },
+    "scripts": {
+        "start": "node node_modules/grunt-cli/bin/grunt",
+        "test": "karma start karma.conf.js --single-run",
+        "postinstall": "node node_modules/grunt-cli/bin/grunt install"
+    },
+    "dependencies": {
+        "async": "~0.2.9",
+        "bcryptjs": "~1.0.4",
+        "bower": "~1.3.8",
+        "connect-flash": "~0.1.1",
+        "connect-mongo": "^1.3.2",
+        "console-stamp": "~0.1.1",
+        "dotenv": "^4.0.0",
+        "express": "~3.4.0",
+        "forever": "latest",
+        "grunt": "~0.4.1",
+        "grunt-bower-task": "~0.4.0",
+        "grunt-cli": "~0.1.9",
+        "jade": "~0.35.0",
+        "mean-logger": "~0.0.1",
+        "mongodb": "^2.2.19",
+        "mongoose": "^4.7.6",
+        "passport": "~0.1.17",
+        "passport-facebook": "~2.0.0",
+        "passport-github": "~0.1.5",
+        "passport-google-oauth": "~0.1.5",
+        "passport-local": "~0.1.6",
+        "passport-twitter": "~1.0.2",
+        "sinon": "~1.7.3",
+        "socket.io": "~0.9.16",
+        "socket.io-client": "~0.9.16",
+        "underscore": "~1.5.2",
+        "view-helpers": "~0.1.3"
+    },
+    "devDependencies": {
+        "browserify": "^13.3.0",
+        "coveralls": "^2.11.15",
+        "grunt": "~0.4.1",
+        "grunt-concurrent": "~0.4.0",
+        "grunt-contrib-jshint": "~0.6.4",
+        "grunt-contrib-sass": "~0.5.0",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-mocha-test": "~0.7.0",
+        "grunt-nodemon": "~0.1.1",
+        "jasmine-core": "^2.5.2",
+        "karma": "^1.4.0",
+        "karma-browserify": "^5.1.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-coverage": "^1.1.1",
+        "karma-coveralls": "^1.1.2",
+        "karma-firefox-launcher": "^1.0.0",
+        "karma-jasmine": "^1.1.0",
+        "karma-phantomjs-launcher": "^1.0.2",
+        "should": "~1.3.0",
+        "supertest": "~0.8.0",
+        "watchify": "^3.8.0"
+    }
 }
