--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 after_script:
-  - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls.js
+  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 
-after_success:
-- npm run coveralls
+
+# after_success:
+# - npm run coveralls
