--- a/package.json
+++ b/package.json
@@ -9,71 +9,90 @@
     "url": "https://github.com/cardsforhumanity/cardsforhumanity.git"
   },
   "engines": {
-    "node": "6.6.0",
-    "npm": "3.10.3"
+    "node": "6.9.4",
+    "npm": "4.1.1"
   },
   "scripts": {
-    "start": "node node_modules/gulp/bin/gulp",
-    "test": "node node_modules/gulp/bin/gulp test",
-    "postinstall": "node node_modules/gulp/bin/gulp install",
-    "test:coverage": "rm -rf coverage/ && karma start --single-run",
-    "coveralls": "cat ./coverage/**/lcov.info | coveralls"
+    "start": "gulp",
+    "test": "gulp test",
+    "cover": "./node_modules/istanbul/lib/cli.js cover ./node_modules/.bin/_mocha ./test/**/*.js",
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
-    "chai": "^3.5.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
-    "dotenv": "^2.0.0",
+    "dotenv": "^4.0.0",
     "express": "~3.4.0",
-    "express-session": "^1.14.1",
     "forever": "latest",
     "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13",
+    "grunt": "~0.4.1",
+    "grunt-bower-task": "~0.4.0",
+    "grunt-cli": "~0.1.9",
     "jade": "~0.35.0",
-    "jquery": "^3.1.1",
-    "jsonwebtoken": "^7.1.9",
     "mean-logger": "~0.0.1",
-    "mocha": "^3.1.0",
-    "mongoose": ">=4.1.11",
-    "morgan": "^1.7.0",
+    "mongodb": "^2.2.21",
+    "jsonwebtoken": "^7.2.1",
+    "moment": "^2.17.1",
+    "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
     "passport-github": "~0.1.5",
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
-    "request": "^2.75.0",
     "sinon": "~1.7.3",
     "socket.io": "~0.9.16",
     "socket.io-client": "~0.9.16",
     "underscore": "~1.5.2",
-    "view-helpers": "~0.1.3"
+    "view-helpers": "~0.1.5"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "coveralls": "^2.11.14",
-    "eslint": "^3.6.1",
+    "browser-sync": "^2.18.6",
+    "browserify": "^13.3.0",
+    "browserify-shim": "^3.8.12",
+    "coveralls": "^2.11.15",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "grunt": "~0.4.1",
+    "grunt-concurrent": "~0.4.0",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha-test": "~0.7.0",
+    "grunt-nodemon": "~0.1.1",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
+    "gulp-browserify": "^0.5.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-livereload": "^3.8.1",
+    "gulp-exit": "0.0.2",
+    "gulp-istanbul": "^1.1.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-nodemon": "^2.1.0",
-    "gulp-sass": "^2.3.2",
-    "istanbul": "^0.4.5",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-run": "^1.7.1",
+    "gulp-sass": "^3.1.0",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
+    "karma": "^1.4.0",
+    "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-ng-html2js-preprocessor": "^1.0.0",
-    "mocha": "^3.1.0",
-    "ng-html2js": "^3.0.0"
+    "karma-coveralls": "^1.1.2",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mongo": "^0.1.0",
+    "mongodb": "^2.2.21",
+    "mongoose": "^4.7.7",
+    "should": "~1.3.0",
+    "socket.io": "^0.9.17",
+    "supertest": "~0.8.0",
+    "view-helpers": "^0.1.5",
+    "watchify": "^3.8.0"
   }
 }
