chore(coveralls): update coveralls script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 after_script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+  - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls.js
 
-
-# after_success:
-# - npm run coveralls
+after_success: 'npm run coveralls'
