chore(coveralls): update coveralls script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ script: npm test
 after_script:
   - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls.js
 
-after_success: 'npm run coveralls'
+after_success:
+- npm run coveralls
