--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_install:
 after_script:
   - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls.js
 
-after_success: 'npm run coveralls'
+after_success:
+- npm run coveralls
