--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "start": "gulp",
     "test": "gulp test",
-    "cover": "./node_modules/istanbul/lib/cli.js cover ./node_modules/.bin/_mocha ./test/**/*.js",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+    "test:coverage": "rm -rf coverage/ && karma start --single-run",
+    "coveralls": "npm run test:coverage && cat ./coverage/**/lcov.info | coveralls"
   },
   "dependencies": {
     "async": "~0.2.9",
@@ -83,6 +83,8 @@
     "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
