--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
@@ -38,15 +40,15 @@
     "gulp": "^3.9.1",
     "jade": "~0.35.0",
     "jasmine-core": "^2.5.2",
+    "jsonwebtoken": "^7.2.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "mean-logger": "~0.0.1",
-    "mongodb": "^2.2.21",
-    "jsonwebtoken": "^7.2.1",
     "moment": "^2.17.1",
+    "mongodb": "^2.2.21",
     "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
