--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
-    "eslint": "^3.13.1",
     "bcryptjs": "^1.0.5",
     "browser-sync": "^2.18.6",
+    "chai": "^3.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "dotenv": "^4.0.0",
+    "eslint": "^3.13.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
     "express": "^3.4.8",
