--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "view-helpers": "~0.1.5"
   },
   "devDependencies": {
+    "bcryptjs": "^1.0.5",
     "browser-sync": "^2.18.6",
-    "coveralls": "^2.11.15",
+    "chai": "^3.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
+    "coveralls": "^2.11.15",
     "dotenv": "^4.0.0",
     "eslint": "^3.13.1",
     "eslint-config-airbnb-base": "^11.0.1",
