--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "dotenv": "^4.0.0",
     "express": "~3.4.0",
     "forever": "latest",
-    "gulp": "^3.9.1",
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
     "jade": "~0.35.0",
-    "mean-logger": "~0.0.1",
-    "mongodb": "^2.2.21",
     "jsonwebtoken": "^7.2.1",
+    "karma-jasmine": "^1.1.0",
+    "mean-logger": "~0.0.1",
     "moment": "^2.17.1",
+    "mongodb": "^2.2.21",
     "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
@@ -52,9 +55,9 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.6",
-    "coveralls": "^2.11.15",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
+    "coveralls": "^2.11.15",
     "dotenv": "^4.0.0",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
