--- a/package.json
+++ b/package.json
@@ -22,21 +22,24 @@
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
     "dotenv": "^4.0.0",
     "express": "~3.4.0",
     "forever": "latest",
-    "gulp": "^3.9.1",
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
+    "gulp": "^3.9.1",
     "jade": "~0.35.0",
-    "mean-logger": "~0.0.1",
-    "mongodb": "^2.2.21",
     "jsonwebtoken": "^7.2.1",
+    "mean-logger": "~0.0.1",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
+    "mongodb": "^2.2.21",
     "mongoose": "^4.7.6",
     "passport": "~0.1.17",
     "passport-facebook": "~2.0.0",
