--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "npm": "4.1.1"
   },
   "scripts": {
-    "start": "node node_modules/grunt-cli/bin/grunt",
-    "test": "node node_modules/grunt-cli/bin/grunt test",
-    "postinstall": "node node_modules/grunt-cli/bin/grunt install"
+    "start": "gulp",
+    "test": "node node_modules/gulp/bin/gulp test"
   },
   "dependencies": {
     "async": "~0.2.9",
@@ -30,6 +29,7 @@
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
+    "gulp": "^3.9.1",
     "jade": "~0.35.0",
     "mean-logger": "~0.0.1",
     "mongodb": "^2.2.19",
@@ -54,6 +54,12 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-mocha-test": "~0.7.0",
     "grunt-nodemon": "~0.1.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-mocha": "^3.0.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^3.1.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
