--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
+    "browser-sync": "^2.18.7",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
@@ -47,6 +48,7 @@
     "view-helpers": "~0.1.3"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.7",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~0.4.0",
     "grunt-contrib-jshint": "~0.6.4",
