--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
     "gulp": "^3.9.1",
+    "gulp-bower": "0.0.13",
+    "gulp-exit": "0.0.2",
+    "gulp-jade": "^1.1.0",
     "jade": "~0.35.0",
     "mean-logger": "~0.0.1",
     "mongodb": "^2.2.19",
