--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "gulp",
     "test": "node node_modules/gulp/bin/gulp test"
+    "postinstall": "gulp bower"
   },
   "dependencies": {
     "async": "~0.2.9",
