--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "gulp",
-    "test": "node node_modules/gulp/bin/gulp test"
+    "test": "node node_modules/gulp/bin/gulp test",
     "postinstall": "gulp bower"
   },
   "dependencies": {
