--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "gulp-bower": "0.0.13",
     "gulp-exit": "0.0.2",
     "gulp-jade": "^1.1.0",
+    "gulp-mocha": "^3.0.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^3.1.0",
     "jade": "~0.35.0",
     "mean-logger": "~0.0.1",
     "mongodb": "^2.2.19",
