--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-bower": "0.0.13",
     "gulp-exit": "0.0.2",
     "gulp-jade": "^1.1.0",
