--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
     "browser-sync": "^2.18.7",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^1.3.2",
     "console-stamp": "~0.1.1",
@@ -47,6 +49,10 @@
     "jsonwebtoken": "^7.2.1",
     "karma-jasmine": "^1.1.0",
     "mean-logger": "~0.0.1",
+    "jade": "~0.35.0",
+    "jsonwebtoken": "^7.2.1",
+    "mean-logger": "~0.0.1",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "mongodb": "^2.2.21",
     "mongoose": "^4.7.6",
