--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,8 @@
   },
   "exportsOverride": {
     "bootstrap": {
-      "css": "dist/css/*",
-      "js": "dist/js/*",
-      "fonts": "dist/fonts/*"
-    },
+    "/": "dist"
+  },
     "angular-ui-utils": {
       "modules": "modules/route/route.js"
     }
