--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "mocha": true
   },
   "rules": {
+    "quotes": [2, "single"],
     "max-len":[2, 80, 2],
     "indent": [2, 2],
     "one-var": 0,
