Include chat app

--- a/package.json
+++ b/package.json
@@ -31,24 +31,21 @@
     "console-stamp": "~0.1.1",
     "dotenv": "^4.0.0",
     "express": "~3.4.0",
+    "firebase": "^3.6.9",
     "forever": "latest",
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
     "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-eslint": "^3.0.1",
     "gulp-bower": "0.0.13",
+    "gulp-browserify": "^0.5.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-exit": "0.0.2",
     "gulp-jade": "^1.1.0",
     "gulp-mocha": "^3.0.1",
     "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "jade": "~0.35.0",
-    "jsonwebtoken": "^7.2.1",
-    "karma-jasmine": "^1.1.0",
-    "mean-logger": "~0.0.1",
     "jade": "~0.35.0",
     "jasmine-core": "^2.5.2",
     "jsonwebtoken": "^7.2.1",
