--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-bootstrap": "~0.4.0",
     "angular-ui-utils": "0.0.4",
     "jquery": "~1.9.1",
+    "hello": "^1.14.0",
     "underscore": "~1.5.2"
   },
   "exportsOverride": {
