--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jade": "~0.35.0",
     "jasmine-core": "^2.5.2",
     "jsonwebtoken": "^7.2.1",
+    "jwt-simple": "^0.5.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
