--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postinstall": "gulp bower"
   },
   "dependencies": {
+    "angular-jwt": "^0.1.9",
     "async": "~0.2.9",
     "bcryptjs": "~1.0.4",
     "bower": "~1.3.8",
@@ -36,19 +37,15 @@
     "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.9",
     "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-eslint": "^3.0.1",
     "gulp-bower": "0.0.13",
+    "gulp-browserify": "^0.5.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-exit": "0.0.2",
     "gulp-jade": "^1.1.0",
     "gulp-mocha": "^3.0.1",
     "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "jade": "~0.35.0",
-    "jsonwebtoken": "^7.2.1",
-    "karma-jasmine": "^1.1.0",
-    "mean-logger": "~0.0.1",
     "jade": "~0.35.0",
     "jasmine-core": "^2.5.2",
     "jsonwebtoken": "^7.2.1",
