--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "no-undef": 0,
+    "arrow-body-style":0,
+    "object-shorthand":0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
